# rag_system

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README-Docker-Quickstart.txt  README.md  SECURITY.md  Start-KnowledgeIsland-Docker.bat  Stop-KnowledgeIsland-Docker.bat  app.py  compose.yaml  entrypoint.sh  package-lock.json  package.json  playwright.config.js  requirements-dev.txt  requirements-docker.txt  requirements.txt  template-mapping.md  vite.config.js
backend/: __init__.py  app.py  requirements.txt
desktop/: main.py
docs/: BACKLOG.md  DEVLOG.md  README.md  style-guide.md  template-mapping.md
frontend/: LEGACY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
legacy/: __init__.py
ops/: README.md
scripts/: __init__.py  build-backend-sidecar.ps1  build-backend-sidecar.sh  check_docs_consistency.py  check_import_paths.py  docker_down.ps1  docker_down.sh  docker_up.ps1  docker_up.sh  first_run_check.py  gui.py  import_markdown_paths.py  init_storage.py  migrate_vectors_to_qdrant.py  migration_gate_check.py  release_windows.ps1  seed_demo_files.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py
webapp/: agent_tools.py  answer_api.py  answers.py  api.py  api_support.py  assessment.py  auth.py  config.py  document_processing.py  embeddings.py  github_import.py  import_rules.py  (+14 more)
(+689 files in other folders)
