[package]
name = "knowledge-island-desktop"
version = "0.1.0"
description = "Knowledge Island Tauri desktop shell"
authors = ["RAG Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

